// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
.c0 {
  display: flex;
  width: 100%;
  min-width: 250px;
  align-items: center;
  justify-content: space-between;
  border: 1px solid black;
  border-radius: 10px;
  margin: 1em;
  background: transparent;
}

.c0 >* {
  margin: 0.5em;
  padding: 0.5em;
}

.c1 {
  flex-grow: 1;
  flex-shrink: 1;
  border: 0;
  font: inherit;
}

.c1:focus {
  box-shadow: inset 0 0 0 1px black;
  border-radius: 7px;
  outline: 0;
}

.c3 {
  position: relative;
  font: inherit;
  flex-grow: 0;
  flex-shrink: 0;
  width: 2em;
  height: 2em;
  background: transparent;
  border: 0;
}

.c2,
.c3:before,
.c3:after {
  box-sizing: border-box;
}

.c3:focus {
  outline: 0;
}

.c3:focus:before,
.c3:focus:after {
  box-shadow: 0 0 5px 1px black;
}

.c3:before,
.c3:after {
  content: '';
  display: block;
  position: absolute;
}

.c3:before {
  left: 0;
  top: 0;
  width: 80%;
  height: 80%;
  border: calc(4em / 16) solid black;
  border-radius: 50%;
}

.c3:after {
  right: 0;
  bottom: 0;
  height: calc(4em / 16);
  width: calc(1.41 * 100% - 1.41 * 40% - 40%);
  background: black;
  transform: rotateZ(40deg);
  transform-origin: bottom right;
}

.c3:hover {
  cursor: pointer;
}

<form
  className="c0"
  color="transparent"
  onSubmit={[Function]}
>
  <input
    className="c1"
    color="black"
    name="search"
    onChange={[Function]}
    type="search"
  />
  <button
    className="c2 c3"
    color="black"
  />
</form>
`;

exports[`Test with props 1`] = `
.c0 {
  display: flex;
  width: 100%;
  min-width: 250px;
  align-items: center;
  justify-content: space-between;
  border: 1px solid black;
  border-radius: 10px;
  margin: 1em;
  background: red;
}

.c0 >* {
  margin: 0.5em;
  padding: 0.5em;
}

.c1 {
  flex-grow: 1;
  flex-shrink: 1;
  border: 0;
  font: inherit;
}

.c1:focus {
  box-shadow: inset 0 0 0 1px green;
  border-radius: 7px;
  outline: 0;
}

.c3 {
  position: relative;
  font: inherit;
  flex-grow: 0;
  flex-shrink: 0;
  width: 2em;
  height: 2em;
  background: transparent;
  border: 0;
}

.c2,
.c3:before,
.c3:after {
  box-sizing: border-box;
}

.c3:focus {
  outline: 0;
}

.c3:focus:before,
.c3:focus:after {
  box-shadow: 0 0 5px 1px green;
}

.c3:before,
.c3:after {
  content: '';
  display: block;
  position: absolute;
}

.c3:before {
  left: 0;
  top: 0;
  width: 80%;
  height: 80%;
  border: calc(4em / 16) solid green;
  border-radius: 50%;
}

.c3:after {
  right: 0;
  bottom: 0;
  height: calc(4em / 16);
  width: calc(1.41 * 100% - 1.41 * 40% - 40%);
  background: green;
  transform: rotateZ(40deg);
  transform-origin: bottom right;
}

.c3:hover {
  cursor: pointer;
}

<form
  className="c0"
  color="red"
  onSubmit={[Function]}
>
  <input
    className="c1"
    color="green"
    name="search"
    onChange={[Function]}
    placeholder="placeholder"
    type="search"
  />
  <button
    className="c2 c3"
    color="green"
  />
</form>
`;
